--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="fa">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تغییر دادن داده های فایل JSON</title>
+</head>
+<body>
+    <script src="script.js"></script>
+</body>
+</html>
